objects/EUR_CRM_Stock_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>EUR_CRM_Quantity__c</fullName>
        <label>Quantity</label>
        <precision>10</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sales_Order_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order Item</label>
        <referenceTo>EUR_CRM_Sales_Order_Items__c</referenceTo>
        <relationshipLabel>Stock Transactions (EU)</relationshipLabel>
        <relationshipName>Stock_Transactions_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Sales_Rep_Order_Item__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Rep Order Item</label>
        <referenceTo>EUR_CRM_SalesRep_Order_Items__c</referenceTo>
        <relationshipLabel>Stock Transactions (EU)</relationshipLabel>
        <relationshipName>Stock_Transactions_EU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Stock_Item__c</fullName>
        <label>Stock Item</label>
        <referenceTo>EUR_CRM_Stock_Item__c</referenceTo>
        <relationshipLabel>Stock Transactions (EU)</relationshipLabel>
        <relationshipName>Stock_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>EUR_CRM_Transaction_Type__c</fullName>
        <label>Transaction Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit</fullName>
                </value>
                <value>
                    <fullName>Debit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Stock Transaction (EU)</label>
    <listViews>
        <fullName>EUR_CRM_DK_Stock_Transactions</fullName>
        <columns>NAME</columns>
        <columns>EUR_CRM_Stock_Item__c</columns>
        <columns>EUR_CRM_Transaction_Type__c</columns>
        <columns>EUR_CRM_Quantity__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>EUR_CRM_Stock_Transaction__c.EUR_DK_Stock_Transaction</value>
        </filters>
        <label>All DK Stock Transactions</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>EUR_DK</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>ST-{0000000000}</displayFormat>
        <label>Stock Transaction ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock Transactions (EU)</pluralLabel>
    <recordTypes>
        <fullName>EUR_DE_Stock_Transaction</fullName>
        <active>true</active>
        <label>EUR DE Stock Transaction</label>
    </recordTypes>
    <recordTypes>
        <fullName>EUR_DK_Stock_Transaction</fullName>
        <active>true</active>
        <label>EUR DK Stock Transaction</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>